Use non-deprecated newInstance() method